# sentinel

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  sample.docx  sample.txt  sentinel.db  start_tunnel.py  test_gemma.py  test_models.py
backend/alembic/: env.py
backend/alembic/versions/: 7ad3179add76_initial_schema.py  845e027ff51d_add_user_role_for_rbac.py  e829ba42478d_add_analysis_table.py
backend/app/: main.py
backend/app/agents/: ai_client.py  analysis_orchestrator.py  compliance_agent.py  models.py  prompts.py  security_agent.py
backend/app/agents/.ipynb_checkpoints/: ai_client-checkpoint.py  prompts-checkpoint.py
backend/app/api/: router.py
backend/app/core/: exceptions.py  logging_config.py  settings.py
backend/app/database/: base.py  mixins.py  session.py
backend/app/middleware/: cors.py
backend/app/models/: __init__.py  analysis.py  organization.py  project.py  user.py
backend/app/parsers/: base.py  docx_parser.py  parser_factory.py  pdf_parser.py  text_parser.py
backend/app/schemas/: analysis.py  auth.py  dashboard.py  organization.py  project.py  user.py
backend/app/security/: dependencies.py  hashing.py  jwt.py  roles.py
backend/app/services/: analysis_record_service.py  analysis_service.py  dashboard_service.py  organization_service.py  project_service.py  user_service.py
backend/scripts/: seed.py  test_analysis_service.py  test_compliance_agent.py  test_docx_parser.py  test_gemini.py  test_orchestrator.py  test_parser_factory.py  test_pdf_parser.py  test_security_agent.py  test_text_parser.py
(+72 files in other folders)
